--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "rest-api-express",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/index.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "server": "nodemon ./src/index.js",
-    "build": "node ./src/index.js"
+    "start": "node ./src/index.js"
   },
   "keywords": [],
   "author": "",
